@@ -51,7 +51,7 @@ typedef enum
     BATTERY_IS_CHARGING,
     BATTERY_IS_DISCHARGING,
     BATTERY_CHARGE_LOW,
-    BATTERY_CRITICALLY_LOW,
+    BATTERY_CHARGE_CRITICAL,
     BATTERY_NOT_PRESENT
     
 } XfpmBatteryState;
