@@ -24,6 +24,8 @@
 #include <glib-object.h>
 #include <gtk/gtk.h>
 
+#include <libnotify/notify.h>
+
 G_BEGIN_DECLS
 
 #define XFPM_TYPE_NOTIFY        (xfpm_notify_get_type () )
@@ -32,9 +34,9 @@ G_BEGIN_DECLS
 
 typedef enum 
 {
+    XFPM_NOTIFY_LOW,
     XFPM_NOTIFY_CRITICAL,
-    XFPM_NOTIFY_NORMAL,
-    XFPM_NOTIFY_LOW
+    XFPM_NOTIFY_NORMAL
     
 } XfpmNotifyUrgency;
 
@@ -53,19 +55,35 @@ typedef struct
     
 } XfpmNotifyClass;
 
-GType        	 xfpm_notify_get_type          (void) G_GNUC_CONST;
-XfpmNotify      *xfpm_notify_new               (void);
+GType        	 	  xfpm_notify_get_type          	    (void) G_GNUC_CONST;
+XfpmNotify      	 *xfpm_notify_new                           (void);
 
-void             xfpm_notify_show_notification (XfpmNotify *notify,
-						const gchar *title,
-						const gchar *text,
-						const gchar *icon_name,
-						gint timeout,
-						gboolean simple,
-						XfpmNotifyUrgency urgency,
-						GtkStatusIcon *icon);
+void             	  xfpm_notify_show_notification 	    (XfpmNotify *notify,
+								     const gchar *title,
+								     const gchar *text,
+								     const gchar *icon_name,
+								     gint timeout,
+								     gboolean simple,
+								     XfpmNotifyUrgency urgency,
+								     GtkStatusIcon *icon);
 
+NotifyNotification       *xfpm_notify_new_notification  	    (XfpmNotify *notify,
+								     const gchar *title,
+								     const gchar *text,
+								     const gchar *icon_name,
+								     guint timeout,
+								     XfpmNotifyUrgency urgency,
+								     GtkStatusIcon *icon);
 
+void 			  xfpm_notify_add_action_to_notification    (XfpmNotify *notify, 
+								     NotifyNotification *n,
+								     const gchar *id, 
+								     const gchar *action_label,
+								     NotifyActionCallback callback, 
+								     gpointer data);
+void 			  xfpm_notify_present_notification 	    (XfpmNotify *notify, 
+								     NotifyNotification *n,
+								     gboolean simple);
 G_END_DECLS
 
 #endif /* __XFPM_NOTIFY_H */
