@@ -1,4 +1,7 @@
 
+2009-03-10 13:24 Ali aliov@xfce.org 
+	 * : Handle critical battery charge+ update on the notifications
+
 2009-03-10 10:11 Ali aliov@xfce.org 
 	 * : Added Only show in XFCE in the autostart file and correct tooltip of a primary battery
 
